syntax = "proto3";

package odds;

option go_package = "github.com/Businge931/sba-api-gateway/proto";

service OddsService {
  rpc CreateOdds (CreateOddsRequest) returns (CreateOddsResponse);
  rpc ReadOdds (ReadOddsRequest) returns (ReadOddsResponse);
  rpc UpdateOdds (UpdateOddsRequest) returns (UpdateOddsResponse);
  rpc DeleteOdds (DeleteOddsRequest) returns (DeleteOddsResponse);
}

message CreateOddsRequest {
  string league = 1;
  string home_team = 2;
  string away_team = 3;
  float home_team_win_odds = 4;
  float away_team_win_odds = 5;
  float draw_odds = 6;
  string game_date = 7;
}

message CreateOddsResponse {
  bool success = 1;
  string message = 2;
  string details = 3; 
}

message ReadOddsRequest {
  string league = 1;
  string date = 2;
}

message ReadOddsResponse {
  repeated CreateOddsRequest odds = 1;
  string details = 2;
}

message UpdateOddsRequest {
  string league = 1;
  string home_team = 2;
  string away_team = 3;
  float home_team_win_odds = 4;
  float away_team_win_odds = 5;
  float draw_odds = 6;
  string game_date = 7;
}

message UpdateOddsResponse {
  bool success = 1;
  string message = 2;
  string details = 3;
}

message DeleteOddsRequest {
  string league = 1;
  string home_team = 2;
  string away_team = 3;
  string game_date = 4;
}

message DeleteOddsResponse {
  bool success = 1;
  string message = 2;
  string details = 3;
}